[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swap-io-py-solana-utils"
version = "0.2.0"
description = "Utilities for working with Solana transactions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
]
keywords = ["solana", "blockchain", "transaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "solders>=0.18.0",
    "base58>=2.1.1",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/swap-dot-io/swap-io-py-solana-utils"
Repository = "https://github.com/swap-dot-io/swap-io-py-solana-utils"
Issues = "https://github.com/swap-dot-io/swap-io-py-solana-utils/issues"